; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/s5p-mfc/extr_s5p_mfc_dec.c_s5p_mfc_start_streaming.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/s5p-mfc/extr_s5p_mfc_dec.c_s5p_mfc_start_streaming.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vb2_queue = type { i32 }
%struct.s5p_mfc_ctx = type { i64, i32, %struct.s5p_mfc_dev* }
%struct.s5p_mfc_dev = type { i32 }

@MFCINST_FINISHING = common dso_local global i64 0, align 8
@MFCINST_FINISHED = common dso_local global i64 0, align 8
@MFCINST_RUNNING = common dso_local global i64 0, align 8
@try_run = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vb2_queue*, i32)* @s5p_mfc_start_streaming to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s5p_mfc_start_streaming(%struct.vb2_queue* %0, i32 %1) #0 {
  %3 = alloca %struct.vb2_queue*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.s5p_mfc_ctx*, align 8
  %6 = alloca %struct.s5p_mfc_dev*, align 8
  store %struct.vb2_queue* %0, %struct.vb2_queue** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.vb2_queue*, %struct.vb2_queue** %3, align 8
  %8 = getelementptr inbounds %struct.vb2_queue, %struct.vb2_queue* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.s5p_mfc_ctx* @fh_to_ctx(i32 %9)
  store %struct.s5p_mfc_ctx* %10, %struct.s5p_mfc_ctx** %5, align 8
  %11 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %12 = getelementptr inbounds %struct.s5p_mfc_ctx, %struct.s5p_mfc_ctx* %11, i32 0, i32 2
  %13 = load %struct.s5p_mfc_dev*, %struct.s5p_mfc_dev** %12, align 8
  store %struct.s5p_mfc_dev* %13, %struct.s5p_mfc_dev** %6, align 8
  %14 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %15 = getelementptr inbounds %struct.s5p_mfc_ctx, %struct.s5p_mfc_ctx* %14, i32 0, i32 1
  %16 = call i32 @v4l2_ctrl_handler_setup(i32* %15)
  %17 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %18 = getelementptr inbounds %struct.s5p_mfc_ctx, %struct.s5p_mfc_ctx* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @MFCINST_FINISHING, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %28, label %22

22:                                               ; preds = %2
  %23 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %24 = getelementptr inbounds %struct.s5p_mfc_ctx, %struct.s5p_mfc_ctx* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @MFCINST_FINISHED, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %22, %2
  %29 = load i64, i64* @MFCINST_RUNNING, align 8
  %30 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %31 = getelementptr inbounds %struct.s5p_mfc_ctx, %struct.s5p_mfc_ctx* %30, i32 0, i32 0
  store i64 %29, i64* %31, align 8
  br label %32

32:                                               ; preds = %28, %22
  %33 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %34 = call i64 @s5p_mfc_ctx_ready(%struct.s5p_mfc_ctx* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load %struct.s5p_mfc_ctx*, %struct.s5p_mfc_ctx** %5, align 8
  %38 = call i32 @set_work_bit_irqsave(%struct.s5p_mfc_ctx* %37)
  br label %39

39:                                               ; preds = %36, %32
  %40 = load %struct.s5p_mfc_dev*, %struct.s5p_mfc_dev** %6, align 8
  %41 = getelementptr inbounds %struct.s5p_mfc_dev, %struct.s5p_mfc_dev* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* @try_run, align 4
  %44 = load %struct.s5p_mfc_dev*, %struct.s5p_mfc_dev** %6, align 8
  %45 = call i32 @s5p_mfc_hw_call(i32 %42, i32 %43, %struct.s5p_mfc_dev* %44)
  ret i32 0
}

declare dso_local %struct.s5p_mfc_ctx* @fh_to_ctx(i32) #1

declare dso_local i32 @v4l2_ctrl_handler_setup(i32*) #1

declare dso_local i64 @s5p_mfc_ctx_ready(%struct.s5p_mfc_ctx*) #1

declare dso_local i32 @set_work_bit_irqsave(%struct.s5p_mfc_ctx*) #1

declare dso_local i32 @s5p_mfc_hw_call(i32, i32, %struct.s5p_mfc_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
